# release-notes-openSUSE

./: .gitignore  DC-release-notes  Makefile  Makefile.am  NEWS  README  README.md  RELEASE-NOTES-openSUSE.xml  configure.ac  docbook-utf-8.xsl  fix-up.xsl  html.xsl  openSUSE_16_Releasenotes_sv.txt  profile.xsl  rel.dsl  release-notes-openSUSE.spec.in  release-notes.ent.in  release-notes.pot  rename-po-file.sh  yast.xsl
.github/workflows/: validation.yml
po/: af.po  ar.po  be.po  bg.po  bn.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  km.po  ko.po  ku.po  lo.po  lt.po  mk.po  mr.po  (+31 more)
tools/etc/: releasenotes
www/: README  index.html
xml/: Makefile.am  release-notes.ent  release-notes.ent.in  release-notes.xml
xml/po/: cs.po  it.po  nl.po  pt_BR.po  ru.po
